<resources>
    <string name="added_word">%s : Saved</string>
    <string name="auto_cap">Auto-capitalization</string>
    <string name="auto_cap_summary">Capitalize the start of a sentence</string>
    <string name="auto_complete">Auto-correction</string>
    <string name="auto_complete_dialog_title">Auto completion</string>
    <string name="auto_complete_summary">a.k.a. Auto-complete. Spacebar and punctuation automatically insert highlighted word</string>
    <string name="auto_correction">Word suggestions</string>
    <string name="auto_correction_summary">Automatically correct the previous word</string>
    <string name="auto_punctuate">Auto-punctuate</string>
    <string name="auto_punctuate_summary" />
    <string name="auto_submit">Auto submit after voice</string>
    <string name="auto_submit_summary">Automatically press enter when searching or going to the next field.</string>
    <string name="bigram_suggestion">Bigram Suggestions</string>
    <string name="bigram_suggestion_summary">Use previous word to improve suggestion</string>
    <string name="cancel">Cancel</string>
    <string name="close_the_keyboard">Close the keyboard\10\10Press the Back key.</string>
    <string name="english_ime_debug_settings">Android keyboard Debug settings</string>
    <string name="english_ime_input_options">Input options</string>
    <string name="english_ime_name">Multiling keyboard</string>
    <string name="english_ime_settings">Keyboard settings</string>
    <string name="has_dictionary">Plugin √</string>
    <string name="hint_add_to_dictionary">← Touch again to save</string>
    <string name="hit_correction">Correct typing errors</string>
    <string name="hit_correction_land">Landscape input errors</string>
    <string name="hit_correction_land_summary">Enable input error correction</string>
    <string name="hit_correction_summary">Enable input error correction</string>
    <string name="keyboard_layout">Keyboard Theme</string>
    <string name="keyboard_settings">Keyboard settings\10\10Touch &amp; hold the ?123 key.</string>
    <string name="label_alpha_key">ABC</string>
    <string name="label_alt_key">ALT</string>
    <string name="label_done_key">Done</string>
    <string name="label_go_key">Go</string>
    <string name="label_next_key">Next</string>
    <string name="label_phone_key">123</string>
    <string name="label_send_key">Send</string>
    <string name="label_symbol_key">?123</string>
    <string name="language_selection_summary">Slide finger on spacebar to change language</string>
    <string name="language_selection_title">Languages</string>
    <string name="layout_basic">Basic</string>
    <string name="layout_gingerbread">Gingerbread</string>
    <string name="layout_high_contrast">Basic (High Contrast)</string>
    <string name="layout_stone_bold">Stone</string>
    <string name="ok">OK</string>
    <string name="open_the_keyboard">Open the keyboard\10\10Touch any text field.</string>
    <string name="popular_domain_0">.com</string>
    <string name="popular_domain_1">.net</string>
    <string name="popular_domain_2">.org</string>
    <string name="popular_domain_3">.gov</string>
    <string name="popular_domain_4">.edu</string>
    <string name="popup_on_keypress">Popup on keypress</string>
    <string name="prediction">Word suggestions</string>
    <string name="prediction_category">Word suggestion settings</string>
    <string name="prediction_landscape">Increase text field size</string>
    <string name="prediction_landscape_summary">Hide word suggestions in landscape view</string>
    <string name="prediction_summary">Enable auto completion while typing</string>
    <string name="prefs_debug_mode">Debug Mode</string>
    <string name="prefs_description_log">Help improve this input method editor by automatically sending usage statistics and crash reports to Google.</string>
    <string name="prefs_enable_log">Enable user feedback</string>
    <string name="prefs_enable_recorrection">Touch to correct words</string>
    <string name="prefs_enable_recorrection_summary">Touch entered words to correct them</string>
    <string name="prefs_settings_key">Show settings key</string>
    <string name="quick_fixes">Quick fixes</string>
    <string name="quick_fixes_summary">Corrects commonly typed mistakes (i.e. taht→that)</string>
    <string name="selectInputMethod">Switch input method</string>
    <string name="settings_key_mode_always_hide_name">Always hide</string>
    <string name="settings_key_mode_always_show_name">Always show</string>
    <string name="settings_key_mode_auto_name">Automatic</string>
    <string name="show_suggestions">Show suggestions</string>
    <string name="show_suggestions_summary">Display suggested words while typing</string>
    <string name="sound_on_keypress">Sound on keypress</string>
    <string name="subtype_mode_keyboard">keyboard</string>
    <string name="subtype_mode_voice">voice</string>
    <string name="tip_access_symbols">Access numbers and symbols</string>
    <string name="tip_add_to_dictionary">Press and hold the left-most word to add it to the dictionary</string>
    <string name="tip_dismiss">Press the back key ↶ to close the keyboard at any point</string>
    <string name="tip_long_press">Hold a key down to see accents (ø, ö, etc.)</string>
    <string name="tip_to_close_symbols">Go back to letters by touching this key again</string>
    <string name="tip_to_launch_settings">Touch &amp; hold this key to change keyboard settings, like auto complete</string>
    <string name="tip_to_open_keyboard">The keyboard opens any time you touch a text field</string>
    <string name="tip_to_open_symbols">Switch to numbers and symbols by touching this key</string>
    <string name="tip_to_start_typing">Try it!</string>
    <string name="tip_to_view_accents">Touch &amp; hold a key to view accents\10(ø, ö, ô, ó, and so on) </string>
    <string name="touch_and_hold">Touch &amp; hold a key for options\10\10Access punctuation and accents.</string>
    <string name="touch_to_continue">Touch this hint to continue »</string>
    <string name="touch_to_finish">Touch here to close this hint and start typing!</string>
    <string name="vibrate_on_keypress">Vibrate on keypress</string>
    <string name="voice_audio_error">Audio problem</string>
    <string name="voice_error">Error. Please try again.</string>
    <string name="voice_hint_dialog_message">To use voice input, press the microphone button or slide your finger across the on-screen keyboard.</string>
    <string name="voice_input">Voice input (Microphone)</string>
    <string name="voice_listening">Speak now</string>
    <string name="voice_network_error">Couldn\'t connect</string>
    <string name="voice_no_match">No matches found</string>
    <string name="voice_not_installed">Voice search not installed</string>
    <string name="voice_punctuation_hint">Hint: Next time, try speaking punctuation like \"period\", \"comma\", or \"question mark\".</string>
    <string name="voice_server_error">Server error</string>
    <string name="voice_speech_timeout">No speech heard</string>
    <string name="voice_swipe_hint">Hint: Swipe across keyboard to speak</string>
    <string name="voice_too_much_speech">Error, too much speech.</string>
    <string name="voice_warning_how_to_turn_off">To turn off voice input, go to keyboard settings.</string>
    <string name="voice_warning_locale_not_supported">Voice input is not currently supported for your language, but does work in English.</string>
    <string name="voice_warning_may_not_understand">Voice input is an experimental feature using Google\'s networked speech recognition.</string>
    <string name="voice_warning_title">Voice input</string>
    <string name="voice_working">Working</string>
    <string name="alternates_for_a">àáäãâåæ</string>
    <string name="alternates_for_c">çćč</string>
    <string name="alternates_for_d" />
    <string name="alternates_for_e">èéëêœ</string>
    <string name="alternates_for_i">Iìíïî</string>
    <string name="alternates_for_n">ñ</string>
    <string name="alternates_for_o">òóöõøôœ</string>
    <string name="alternates_for_r" />
    <string name="alternates_for_s">š</string>
    <string name="alternates_for_t" />
    <string name="alternates_for_u">ùúüû</string>
    <string name="alternates_for_y" />
    <string name="arrow_keys">Edit mode</string>
    <string name="asp">Apostrophe/accents key</string>
    <string name="auto_norm">Auto switch back</string>
    <string name="auto_norm_sum">Switch back to alpha mode if types one or more non-space/enter characters followed by a space/enter</string>
    <string name="auto_space">Auto-Space</string>
    <string name="auto_space_summary">Insert space between words</string>
    <string name="cap_lock">Shift key</string>
    <string name="cap_lock_summ">Caps lock / Ctrl by long-pressing instead of double-taps shift key (warning: no multitouch if on)</string>
    <string name="char_dict">--Cancel--</string>
    <string name="cjsp">Substitute space key</string>
    <string name="cjsp_sum">Use space key to perform other function for spaceless languages</string>
    <string name="dsp">Period Shortcut</string>
    <string name="dsp_summ">Double spaces will insert period and space</string>
    <string name="exit">Exit</string>
    <string name="gest_on">Gestures</string>
    <string name="hard">Hard keys</string>
    <string name="hw_dl_plugin">Install Dictionaries</string>
    <string name="hw_dl_plugin2">★You need dictionary plugins for auto-correction/prediction to work properly.</string>
    <string name="hw_enable">1. Enable Multiling</string>
    <string name="hw_enable2">2. Switch IME to Multiling</string>
    <string name="hw_enable3">3. Download Plug-ins\10(A must for word prediction to work)</string>
    <string name="hw_enable4">4. Enable Languages</string>
    <string name="hw_enabled">Please enable it first</string>
    <string name="hw_homepage">FAQ | Changelog | Feedback</string>
    <string name="hw_homepage_summ">Check out what\'s new, tips, FAQ etc...</string>
    <string name="hw_lang_remind">Don\'t forget to download dictionaries</string>
    <string name="hw_reload_dict">Reload Dictionary</string>
    <string name="hw_share">★ Share it ★</string>
    <string name="hw_share_text">✔★D๑พทℓ๑αδ Tнïร A๓αzïทg Kεγв๑αяδ! http://market.android.com/details?id=com.klye.ime.latin ⇦ԅ(ˆ。ˆԅ) #Multiling #keyboard #Android</string>
    <string name="hw_tips">HanWriting Tips</string>
    <string name="insf">Always suggest</string>
    <string name="insf_sum">Ignore no suggestion flag from apps</string>
    <string name="iphone_arabic">Disconnect Arabic for iPhone</string>
    <string name="iphone_arabic_summ">In case iPhone users can\'t see your text</string>
    <string name="jl">Chinese 接龍</string>
    <string name="keyboard_mode">Keyboard Mode</string>
    <string name="latin">Latin-based settings</string>
    <string name="ld">Language Default</string>
    <string name="ll">ABC Layouts</string>
    <string name="ll_sum">Default/Qwerty/Qwertz/Azerty/Dvorak/Colemak/Neo/Bepo/Turkish F...</string>
    <string name="main_page">Welcome page</string>
    <string name="misc">Misc.</string>
    <string name="ncf">Number/Symbol priority</string>
    <string name="ncf_summ">i.e. pre-select 3 instead of È</string>
    <string name="no_dictionary" />
    <string name="non_latin">Non-Latin settings</string>
    <string name="welcome">Welcome! Now you need to:</string>
    <string name="welcome2">Test it here.</string>
    <string name="dollar">$</string>
    <string name="copy">Copy</string>
    <string name="imex_inst">Warning: beta, not fully tested.\10(Always make a backup copy elsewhere before touching the save button).\10\10To export, copy the text and paste it to other apps such as Google drive.\10To import, do the opposite and press save.</string>
    <string name="paste">Paste</string>
    <string name="save">Save</string>
</resources>