<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/scroll" android:layout_width="match_parent" android:layout_height="wrap_content">
    <LinearLayout android:orientation="vertical" android:background="#220d0c0c" android:padding="15dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:id="@+id/TextView01" android:padding="5px" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/welcome"/>
        <Button android:id="@+id/enable" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/hw_enable"/>
        <Button android:id="@+id/enable2" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/hw_enable2"/>
        <Button android:id="@+id/enable3" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/hw_enable3"/>
        <Button android:id="@+id/enable4" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/hw_enable4"/>
        <Button android:id="@+id/settings" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/english_ime_settings"/>
        <Button android:id="@+id/share" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/hw_share"/>
        <Button android:id="@+id/home" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/hw_homepage"/>
        <Button android:id="@+id/test" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/welcome2"/>
        <EditText android:id="@+id/ebox" android:visibility="invisible" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/welcome2" android:inputType="none|text|textCapSentences|textMultiLine"/>
    </LinearLayout>
</ScrollView>
