<?xml version="1.0" encoding="utf-8"?>
<Keyboard xmlns:android="http://schemas.android.com/apk/res/android" xmlns:latin="http://schemas.android.com/apk/res-auto" android:keyWidth="15%p" android:keyHeight="@dimen/popup_key_height" android:horizontalGap="0px" android:verticalGap="0px">
    <Row android:rowEdgeFlags="top|bottom">
        <Key android:keyEdgeFlags="left" android:keyOutputText="@string/popular_domain_1" android:keyLabel="@string/popular_domain_1"/>
        <Key android:keyOutputText="@string/popular_domain_2" android:keyLabel="@string/popular_domain_2"/>
        <Key android:keyOutputText="@string/popular_domain_3" android:keyLabel="@string/popular_domain_3"/>
        <Key android:keyEdgeFlags="right" android:keyOutputText="@string/popular_domain_4" android:keyLabel="@string/popular_domain_4"/>
    </Row>
</Keyboard>
