<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/scroll" android:layout_width="match_parent" android:layout_height="wrap_content">
    <LinearLayout android:orientation="vertical" android:background="#220d0c0c" android:padding="15dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:padding="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/imex_inst"/>
        <LinearLayout android:orientation="horizontal" android:padding="15dp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <Button android:id="@+id/copy" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/copy" android:layout_weight="1"/>
            <Button android:id="@+id/paste" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/paste" android:layout_weight="1"/>
            <Button android:id="@+id/save" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/save" android:layout_weight="1"/>
        </LinearLayout>
        <TextView android:id="@+id/ebox" android:background="#ff002030" android:padding="15dp" android:layout_width="match_parent" android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>
