<?xml version="1.0" encoding="utf-8"?>
<Keyboard xmlns:android="http://schemas.android.com/apk/res/android" xmlns:latin="http://schemas.android.com/apk/res-auto" android:keyWidth="10%p" android:keyHeight="@dimen/key_height" android:horizontalGap="0px" android:verticalGap="@dimen/key_bottom_gap">
    <Row android:rowEdgeFlags="top">
        <Key android:popupKeyboard="@xml/kbd_popup_template" android:popupCharacters="¹½⅓¼⅛①" android:keyEdgeFlags="left" android:keyLabel="1"/>
        <Key android:popupKeyboard="@xml/kbd_popup_template" android:popupCharacters="²⅔②" android:keyLabel="2"/>
        <Key android:popupKeyboard="@xml/kbd_popup_template" android:popupCharacters="³¾⅜③" android:keyLabel="3"/>
        <Key android:popupKeyboard="@xml/kbd_popup_template" android:popupCharacters="⁴④" android:keyLabel="4"/>
        <Key android:popupKeyboard="@xml/kbd_popup_template" android:popupCharacters="⅝⁵⑤" android:keyLabel="5"/>
        <Key android:popupKeyboard="@xml/kbd_popup_template" android:popupCharacters="⁶⑥" android:keyLabel="6"/>
        <Key android:popupKeyboard="@xml/kbd_popup_template" android:popupCharacters="⅞⁷⑦" android:keyLabel="7"/>
        <Key android:popupKeyboard="@xml/kbd_popup_template" android:popupCharacters="⅛⅜⅝⅞⁸⑧" android:keyLabel="8"/>
        <Key android:popupKeyboard="@xml/kbd_popup_template" android:popupCharacters="⁹⑨" android:keyLabel="9"/>
        <Key android:popupKeyboard="@xml/kbd_popup_template" android:popupCharacters="ⁿ⁰∅" android:keyEdgeFlags="right" android:keyLabel="0"/>
    </Row>
    <Row>
        <Key android:keyEdgeFlags="left" android:keyLabel="@"/>
        <Key android:keyLabel="#"/>
        <Key android:popupKeyboard="@xml/kbd_popup_template" android:popupCharacters="﷼฿¢₡£€¥₣₤₱₪₩₮₫₴₺₹¤$" android:keyLabel="@string/dollar"/>
        <Key android:popupKeyboard="@xml/kbd_popup_template" android:popupCharacters="‰" android:keyLabel="%"/>
        <Key android:keyLabel="&amp;"/>
        <Key android:popupKeyboard="@xml/kbd_popup_template" android:popupCharacters="†‡★" android:keyLabel="*"/>
        <Key android:popupKeyboard="@xml/kbd_popup_template" android:popupCharacters="_–—" android:keyLabel="-"/>
        <Key android:popupKeyboard="@xml/kbd_popup_template" android:popupCharacters="±" android:keyLabel="+"/>
        <Key android:popupKeyboard="@xml/kbd_popup_template" android:popupCharacters="[{&lt;" android:keyLabel="("/>
        <Key android:popupKeyboard="@xml/kbd_popup_template" android:popupCharacters="]}&gt;" android:keyEdgeFlags="right" android:keyLabel=")"/>
    </Row>
    <Row>
        <Key android:keyWidth="15%p" android:codes="@integer/key_shift" android:keyEdgeFlags="left" android:isModifier="true" android:isSticky="true" android:keyLabel="@string/label_alt_key"/>
        <Key android:popupKeyboard="@xml/kbd_popup_template" android:popupCharacters="¡‼" android:keyLabel="!"/>
        <Key android:popupKeyboard="@xml/kbd_popup_template" android:popupCharacters="“”«»˝" android:keyLabel="&quot;"/>
        <Key android:popupKeyboard="@xml/kbd_popup_template" android:popupCharacters="‘’" android:keyLabel="&apos;"/>
        <Key android:keyLabel=":"/>
        <Key android:keyLabel=";"/>
        <Key android:keyLabel="/"/>
        <Key android:popupKeyboard="@xml/kbd_popup_template" android:popupCharacters="¿" android:keyLabel="?"/>
        <Key android:keyWidth="15%p" android:codes="@integer/key_delete" android:keyEdgeFlags="right" android:isModifier="true" android:isRepeatable="true" android:iconPreview="@drawable/sdel" android:keyIcon="@drawable/sdel"/>
    </Row>
    <Row android:rowEdgeFlags="bottom">
        <Key android:keyWidth="15%p" android:codes="@integer/key_symbol" android:popupKeyboard="@xml/popup_modes" android:keyEdgeFlags="left" android:isModifier="true" android:keyLabel="@string/label_alpha_key"/>
        <Key android:codes="@integer/key_settings" android:isModifier="true" android:iconPreview="@drawable/sym_keyboard_settings" android:keyIcon="@drawable/sym_keyboard_settings"/>
        <Key android:codes="@integer/key_f1" android:isModifier="true"/>
        <Key android:keyWidth="30%p" android:codes="@integer/key_space" android:isModifier="true" android:iconPreview="@drawable/sym_keyboard_space" android:keyIcon="@drawable/sym_keyboard_space"/>
        <Key android:isModifier="true" android:keyLabel="."/>
        <Key android:codes="-102" android:isModifier="true" android:keyIcon="@drawable/sym_keyboard_mic"/>
        <Key android:keyWidth="15%p" android:codes="@integer/key_return" android:keyEdgeFlags="right" android:isModifier="true" android:iconPreview="@drawable/sym_keyboard_return" android:keyIcon="@drawable/sym_keyboard_return"/>
    </Row>
</Keyboard>
